# drei

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: slice-claim.md
.github/workflows/: ci.yml  security.yml
.hermes/plans/: 2026-07-19_223012-first-editor-vertical-slice.md
docs/agent/: claims.md
docs/agent/design/: 0001-foundation.md  0002-live-editor-state-architecture-spike.md  0003-hermes-drei-integration.md  recursive-neon-reuse-assessment.md
docs/developer-guide/: agent-workflow.md  development.md
docs/knowledge/: architecture.md  emacs-parity.md  index.md  product-vision.md  terminology.md  verification-model.md
scratch/: a2-probe.el
scripts/: sync-check.sh
spikes/001-editor-state-architecture/: README.md  experiment.py  experiment2.py  experiment3.py
src/drei/: __init__.py  cli.py  commands.py  files.py  harness.py  keys.py  model.py  process.py  render.py  session.py  terminal.py
tests/: conftest.py  test_agent_delivery.py  test_deliver_process_output.py  test_files.py  test_harness.py  test_keys.py  test_kill_ring.py  test_mark_region.py  test_minibuffer.py  test_model.py  test_multibuffer.py  test_multibuffer_find_file.py  test_multibuffer_properties.py  test_package.py  test_permission_prompt.py  test_process.py  test_process_purity.py  test_process_session.py  test_records.py  test_render.py  test_render_windows.py  test_session.py  test_session_properties.py  test_switch_buffer.py  test_terminal.py  test_undo.py  test_windows.py  test_yank_pop.py
tests/acp/: test_auto_approval.py  test_codec.py  test_init.py  test_machine.py  test_messages.py  test_resolve_permission.py  test_sdk_framing.py  test_transcript.py  test_transcript_fold.py
tests/differential/: test_emacs_parity.py  test_emacs_parity_windows.py
tests/termverify/: test_shipped_terminal.py  test_shipped_windows.py
(+18 files in other folders)
